--- a/package.json
+++ b/package.json
@@ -15,5 +15,9 @@
   "bugs": {
     "url": "https://github.com/connecttoconnecticut/tennis-whisp-aws/issues"
   },
-  "homepage": "https://github.com/connecttoconnecticut/tennis-whisp-aws#readme"
+  "homepage": "https://github.com/connecttoconnecticut/tennis-whisp-aws#readme",
+  "dependencies": {
+    "mysql": "^2.16.0",
+    "serverless-websockets-plugin": "^1.0.0"
+  }
 }
