--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "async": "^2.6.2",
     "aws-sdk": "^2.437.0",
     "mysql": "^2.16.0",
-    "serverless-websockets-plugin": "^1.0.0"
+    "serverless-websockets-plugin": "^1.0.0",
+    "ws": "^6.2.1"
   }
 }
