--- a/serverless.yml
+++ b/serverless.yml
@@ -5,9 +5,12 @@ provider:
   runtime: nodejs8.10
   region: eu-central-1
 
-#  iamRoleStatements:
-#    - Effect: Allow
-#      Action:
+  iamRoleStatements:
+    - Effect: Allow
+      Action:
+        - lambda:InvokeFunction
+      Resource:
+        - arn:aws:lambda:eu-central-1:*:*
 #        - "execute-api:ManageConnections"
 #      Resource:
 #        - "arn:aws:execute-api:*:*:**/@connections/*"
@@ -33,6 +36,13 @@ functions:
     events:
       - websocket:
           route: sendMessage
+  liveEventsHandler:
+    handler: src/live_events.liveEventsHandler
+  testStreamHandler:
+    handler: src/testStream.testStreamHandler
+    events:
+      - websocket:
+          route: testStream
     
 
 #resources:
